--- a/ComputerStructure/01. CS.md
+++ b/ComputerStructure/01. CS.md
@@ -60,5 +60,20 @@
 
 
 ### 입출력장치
+마이크, 스피커, 프리터, 마우스, 키보드처럼 컴퓨터 외부에 연결되어 컴퓨터 내부와 정보를 교환하는 장치
+
+- 주변 장치 : 보조기억장치+입출력장치
 
 ### 메인보드와 시스템버스
+- 메인보드(마더보드)
+    - 버스 : 연결된 부품들이 서로 정보를 주고 받을 수 있도록 한다.
+        - 시스템 버스
+
+    |주소 버스|데이터 버스|제어 버스|
+    |----|----|----|
+    |주소를 주고 받는 통로|명령어와 데이터를 주고 받는 통로|제어 신호를 주고 받는 통로|
+            메모리의 1번지 데이터를 읽고 싶다면,
+            1. 제어 버스로 '메모리 읽기' 제어 신호를 보내고,
+            2. 주소 버스로 읽고자 하는 주소를 보낸다.
+            3. 메모리는 데이터 버스로 CPU가 요청한 주소에 있는 내용을 보낸다.
+    
