--- a/ComputerStructure/04. Register.md
+++ b/ComputerStructure/04. Register.md
@@ -34,8 +34,29 @@
 - 스택 주소 지정 방식에 사용된다.
 - 스택의 꼭대기를 가리키는 레지스터(마지막으로 저장한 값의 위치를 저장)
 
+![Alt text](images/04.Register-1.png)
+
 ## 8. 베이스 레지스터
 - 기준 주소로서의 역할을 한다.
 
 # 특정 레지스터를 이용한 주소 지정 방식
 ## 스택 주소 지정 방식
+- 스택과 스택 포인터를 이용한 주소 지정 방식
+- 스택은 메모리 안에 스택 영역에 존재한다.
+
+## 변위 주소 지정 방식
+- 오퍼랜드 필드의 값(변위)과 특정 레지스터의 값을 더하여 유효 주소를 얻는 방식
+
+![Alt text](images/04.Register-2.png)
+- 레지스터 종류에 따라 상대 주소 지정 방식, 베이스 레지스터 주소 지정 방식등으로 나뉜다.
+
+### 상대 주소 지정 방식
+- 오퍼랜드와 프로그램 카운터의 값을 더하여 유효 주소를 얻는 방식
+
+![Alt text](images/04.Register-3.png)
+- 모든 코드를 실행하는 것이 아닌, 분기하여 특정 주소의 코드를 실행할 때 사용된다.
+
+### 베이스 레지스터 주소 지정 방식
+- 베이스 레지스터(기준 주소)와 오퍼랜드(기준 주소로부터 떨어진 거리)의 값을 더하여 유효 주소를 얻는 방식
+
+![Alt text](images/04.Register-4.png)
