--- a/ComputerStructure/06.Process.md
+++ b/ComputerStructure/06.Process.md
@@ -90,3 +90,52 @@
 
 *힙 영역과 스택 영역에 데이터가 쌓여도 새롭게 할당되는 주소가 겹치지 않게 하기 위해서
 ![Alt text](images/06-5.png)
+
+----
+
+# 프로세스 상태
+하나의 프로세스는 여러 상태를 거치며 실행되며, 운영체제는 프로세스의 상태를 PCB를 통해 인식하고 관리한다.
+
+### 생성 상태 (new)
+프로세스를 생성 중인 상태
+- 메모리에 적재되어 PCB를 할당받은 상태
+
+### 준비 상태(ready)
+CPU를 할당받아 실행하기를 기다리는 상태
+
+### 실행 상태(running)
+- 디스패치(dispatch) : 준비 상태인 프로세스가 실행 상태로 전환되는 것
+CPU를 할당받아 실행 중인 상태
+- 할당된 일정 시간 동안만 CPU 사용할 수 있다.
+- 할당된 시간을 모두 사용하고 나면 다시 준비 상태가 된다.
+
+### 대기 상태(blocked)
+입출력장치의 작업을 기다리는 상태
+- 입출력 작업이 완료되면 다시 준비 상태로 CPU 할당을 기다린다.
+
+### 종료 상태(terminated)
+프로세스가 종료된 상태
+- 운영체제는 PCB와 프로세스가 사용한 메모리를 저장한다.
+
+## 프로세스 상태 다이어그램
+![Alt text](images/06-6.png)
+
+----
+
+# 프로세스 계층 구조
+## 부모 프로세스와 자식 프로세스
+ 프로세스가 실행 도중 시스템 호출을 통해 다른 프로세스를 생성하는 데, 이 프로세스를 부모 프로세스라고 하며, 부모 프로세스에 의해 생성된 프로세스를 자식 프로세스라고 한다.
+
+            사용자가 컴퓨터를 켜고 로그인 창을 통해 성공적으로 로그인해서 bash 셸(사용자 인터페이스)로 Vim이라는 문서 편집기 프로그램을 실행한다.
+            최초의 프로세스 - 로그인 프로세스 - bash 프로세스 - Vim 프로세스
+
+- 최초의 프로세스 : 유닉스 init, 리눅스 systemd, macOS launchd
+
+## 프로세스 생성 기법
+
+ 부모 프로세스를 fork하여 복사본을 자식 프로세스로 생성한다.
+ - PID는 다르다. 자식 프로세스에게는 PPID로 부모 프로세스를 기록한다.
+
+ 자식 프로세스는 exec를 호출하여 자신의 메모리 공간을 다른 프로그램으로 교체한다.
+ ![Alt text](images/06-7.png)
+
